
* New features

    - Introduced new PAR loading syntax and semantics:
      use PAR { file => 'path/to/par/or/URL' };
      ==> equivalent to "use PAR 'path/to/par/or/URL';"
    - Introduced the 'fallback' option: (default = 0)
      use PAR { file => 'foo.par', fallback => 1 };
      ==> Loads modules from the PAR file only if loading
          them from @INC did not succeed.

- Bug fixes, etc.

    - Commented a couple of the routines in PAR.pm. (Yay!)
    - New test script for the new fallback loading feature.

[Changes for 0.942 - Jul 22, 2006]

* Bug fixes, etc.

    - Better support for diagnostics.pm (in conjunction with
      Module::ScanDeps 0.62.)
    - Now requiring Module::ScanDeps 0.62.

[Changes for 0.941 - Jun 20, 2006]
(No, PAR isn't stagnating. It's just that 1.00 would draw close if
we continued with 0.01 increases.)

* Bug fixes, etc.

    - Version 0.94 of PAR would use the same cache area for all pp-ed
      applications due to a faulty hotfix for Digest::SHA. This applies
      to PAR 0.94 only. Think of 0.941 being PAR 0.94 done right.

[Changes for 0.94 - Jun  1, 2006]

* New Features

    - Added support for reading options to pp from a file using a
      '@filename' argument to pp:  pp -o foo --gui @filename foo.pl

* Bug fixes, etc.

    - Workaround for a bug in Digest::SHA 5.38 and 5.39 that would prevent
      PAR from being built.
    - Fixed details in the 2-pp.t test file.
    - Now recognizes text files that aren't picked up by the -T operator
      but by the "file" tool.
    - Applied Roderich Schupp's patch to 30-current_exec.t to fix a
      path issue.
    - Now requiring Module::ScanDeps 0.60 which fixes a couple of bugs
      which might be observed as PAR bugs.
    - Now working well with Spreadsheet::ParseExcel which uses an invalid
      POD section to comment out a code block. This wasn't recognized by
      PAR::Filter::PodStrip as POD and hence partly left in...